Added /timer cancel, added tab completions